style.css
button {
  background: white;
  backdrop-filter: blur(50px);
  border: 0;
  border-radius: 1em;
  padding: .5em;
  color: black;
  margin-left: 1em;
  cursor: pointer;
  box-shadow: inset 0 0 0 black;
  transition: box-shadow .5s ease-out;
}

button:active {
  box-shadow: inset 0 0 10px black;
  border: none;
  outline: none;
}

#expandables {
  bottom: 0.3em;
  position: absolute;
}

details {
  padding: 1em;
  background: rgba(0, 0, 0, 0.5);
  color: white;
  border-radius: 1em;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  height: 1em;
  z-index: 10;
  width: 10em;
  backdrop-filter: blur(50px);
  transition: height 1s cubic-bezier(0.175, 0.885, 0.32, 1.275), width 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

details[open] {
  height: 100%;
  width: 100%;
  border-radius: 0;
  position: fixed;
  bottom: 0;
  left: 0;
  margin: 0;
  padding: 0;
  padding-left: 1em;
  padding-right: 1em;
  overflow: scroll;
  overflow-x: hidden;
}

details[open] summary {
  padding-right: 1em;
}

details div {
  float: left;
  padding: 1em;
  font-size: 1em;
  width: max-content;
}

.counter {
  font-family: monospace;
  font-size: 2em;
  padding: 0.1em;
  margin: 0.1em;
  color: white;
  border-radius: 0.5em;
  background: rgba(0, 0, 0, 0.5);
}

.price:after {
  content: ' bruhs'
}

.price:before {
  content: 'Costs '
}

#counter:before {
  content: 'Bruh count: '
}

#strength:before {
  content: 'Bruh strength: '
}

#beagle {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -100;
}

details summary a {
  float: right;
  border-radius: 1em;
  text-decoration: none;
  color: black;
  background: white;
}

#width::before {
  content: 'Beagle width: '
}

